--- a/packages/nds-core/package.json
+++ b/packages/nds-core/package.json
@@ -33,7 +33,8 @@
   "bugs": {
     "url": "https://github.com/nhsevidence/nice-design-system/issues"
   },
-  "dependencies": {
-    "@babel/cli": "^7.1.5"
+  "dependencies": {},
+  "devDependencies": {
+    "@babel/cli": "^7.2.0"
   }
 }
