--- a/packages/nds-jquery/package.json
+++ b/packages/nds-jquery/package.json
@@ -30,7 +30,9 @@
     "url": "https://github.com/nhsevidence/nice-design-system/issues"
   },
   "dependencies": {
-    "@babel/cli": "^7.1.5",
     "@nice-digital/nds-core": "^1.0.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.2.0"
   }
 }
