--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "build-storybook": "build-storybook",
     "// TESTS": "",
     "test": "cross-env CI=true npm run test:unit && npm run lint && npm run flow",
-    "lint": "eslint ./packages/*/src/**/*.js",
-    "lint:fix": "eslint --fix ./packages/*/src/**/*.js",
+    "lint": "npm run lint:js && npm run lint:scss",
+    "lint:js": "eslint ./packages/*/src/**/*.js",
+    "lint:fix": "npm run lint:js -- --fix",
+    "lint:scss": "stylelint packages/**/*.scss",
     "flow": "flow",
     "// TRANSIPLE ES6": "",
     "prebuild:lib": "lerna exec rimraf lib",
@@ -57,7 +59,10 @@
     "node-sass": "^4.10.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1"
+    "style-loader": "^0.23.1",
+    "stylelint": "^9.9.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-scss": "^3.4.0"
   },
   "dependencies": {
     "@nice-digital/icons": "^1.5.0",
