--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build-storybook": "build-storybook",
     "// TESTS": "",
     "test": "cross-env CI=true npm run test:unit && npm run lint && npm run flow",
+    "test:unit": "jest",
+    "test:unit:watch": "jest --watch",
+    "// LINTING": "",
     "lint": "npm run lint:js && npm run lint:scss",
     "lint:js": "eslint ./packages/*/src/**/*.js",
     "lint:fix": "npm run lint:js -- --fix",
@@ -33,6 +36,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.1.6",
+    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
@@ -43,6 +47,7 @@
     "@storybook/addon-viewport": "^4.0.11",
     "@storybook/addons": "^4.0.11",
     "@storybook/react": "^4.0.11",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
@@ -54,6 +59,7 @@
     "eslint-plugin-react": "^7.11.1",
     "flow": "^0.2.3",
     "flow-bin": "^0.87.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "lerna": "^3.5.1",
     "node-sass": "^4.10.0",
