Custom storybook icon includes .storybook folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
     "vsicons.associations.folders": [
       {
         "icon": "storybook",
-        "extensions": ["__stories__"],
+        "extensions": ["__stories__", ".storybook"],
         "format": "svg",
         "filename": true
       }
