--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -25,5 +25,22 @@
   },
   "bugs": {
     "url": "https://github.com/nhsevidence/nice-design-system/issues"
+  },
+  "dependencies": {
+    "@nice-digital/nds-action-banner": "^1.0.0",
+    "@nice-digital/nds-breadcrumbs": "^1.0.0",
+    "@nice-digital/nds-button": "^1.0.0",
+    "@nice-digital/nds-card": "^1.0.0",
+    "@nice-digital/nds-core": "^1.0.0",
+    "@nice-digital/nds-filters": "^1.0.0",
+    "@nice-digital/nds-hero": "^1.0.0",
+    "@nice-digital/nds-in-page-nav": "^1.0.0",
+    "@nice-digital/nds-maintain-ratio": "^1.0.0",
+    "@nice-digital/nds-page-header": "^1.0.0",
+    "@nice-digital/nds-panel": "^1.0.0",
+    "@nice-digital/nds-phase-banner": "^1.0.0",
+    "@nice-digital/nds-stacked-nav": "^1.0.0",
+    "@nice-digital/nds-tabs": "^1.0.0",
+    "@nice-digital/nds-tag": "^1.0.0"
   }
 }
