--- a/packages/nds-forms/package.json
+++ b/packages/nds-forms/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "nds-radio",
+  "name": "@nice-digital/nds-forms",
   "version": "1.0.0",
   "description": "> TODO: description",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
   "homepage": "https://github.com/nhsevidence/nice-design-system#readme",
   "license": "ISC",
-  "main": "lib/nds-radio.js",
+  "main": "lib/index.js",
+  "module": "es/index.js",
+  "scss": "scss/forms.scss",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
