--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -41,6 +41,7 @@
     "@nice-digital/nds-phase-banner": "^1.0.0",
     "@nice-digital/nds-stacked-nav": "^1.0.0",
     "@nice-digital/nds-tabs": "^1.0.0",
-    "@nice-digital/nds-tag": "^1.0.0"
+    "@nice-digital/nds-tag": "^1.0.0",
+    "@nice-digital/nds-forms": "^1.0.0"
   }
 }
