--- a/packages/nds-forms/package.json
+++ b/packages/nds-forms/package.json
@@ -24,5 +24,11 @@
   },
   "bugs": {
     "url": "https://github.com/nhsevidence/nice-design-system/issues"
+  },
+  "dependencies": {
+    "classnames": "^2.2.6"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.2.0"
   }
 }
