--- a/packages/nds-forms/package.json
+++ b/packages/nds-forms/package.json
@@ -25,10 +25,11 @@
   "bugs": {
     "url": "https://github.com/nhsevidence/nice-design-system/issues"
   },
-  "dependencies": {
-    "classnames": "^2.2.6"
-  },
   "devDependencies": {
     "@babel/cli": "^7.2.0"
+  },
+  "dependencies": {
+    "@nice-digital/nds-core": "^1.0.0",
+    "classnames": "^2.2.6"
   }
 }
