Form components refactor
Reduce magic numbers, more spacing from design system. New mixin for error border

--- a/packages/nds-forms/package.json
+++ b/packages/nds-forms/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@nice-digital/nds-forms",
   "version": "1.0.0",
-  "description": "> TODO: description",
+  "description": "Form components for the NICE Design System",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
   "homepage": "https://github.com/nhsevidence/nice-design-system#readme",
-  "license": "ISC",
+  "license": "MIT",
   "main": "lib/index.js",
   "module": "es/index.js",
   "scss": "scss/forms.scss",
