--- a/packages/nds-action-banner/package.json
+++ b/packages/nds-action-banner/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-action-banner",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "Action banner component for the NICE Design System",
   "keywords": [
     "banner"
@@ -33,7 +33,7 @@
     "url": "https://github.com/nhsevidence/nice-design-system/issues"
   },
   "dependencies": {
-    "@nice-digital/nds-core": "^1.0.0"
+    "@nice-digital/nds-core": "^1.0.1-alpha.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0"
