--- a/packages/nds-button/package.json
+++ b/packages/nds-button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-button",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "Button component for the NICE Design System",
   "author": "Ian Routledge <ian.routledge@nice.org.uk>",
   "homepage": "https://nhsevidence.github.io/nice-design-system/",
@@ -30,7 +30,7 @@
     "url": "https://github.com/nhsevidence/nice-design-system/issues"
   },
   "dependencies": {
-    "@nice-digital/nds-core": "^1.0.0"
+    "@nice-digital/nds-core": "^1.0.1-alpha.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0"
