--- a/packages/nds-forms/package.json
+++ b/packages/nds-forms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-forms",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "Form components for the NICE Design System",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
   "homepage": "https://github.com/nhsevidence/nice-design-system#readme",
@@ -29,7 +29,7 @@
     "@babel/cli": "^7.2.0"
   },
   "dependencies": {
-    "@nice-digital/nds-core": "^1.0.0",
+    "@nice-digital/nds-core": "^1.0.1-alpha.0",
     "classnames": "^2.2.6"
   }
 }
