--- a/packages/nds-jquery/package.json
+++ b/packages/nds-jquery/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-jquery",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "JQuery utils for implementing the NICE Design System",
   "keywords": [
     "jquery"
@@ -30,7 +30,7 @@
     "url": "https://github.com/nhsevidence/nice-design-system/issues"
   },
   "dependencies": {
-    "@nice-digital/nds-core": "^1.0.0"
+    "@nice-digital/nds-core": "^1.0.1-alpha.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0"
