--- a/packages/nds-stacked-nav/package.json
+++ b/packages/nds-stacked-nav/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-stacked-nav",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "Stacked navigation component for the NICE Design System",
   "keywords": [
     "navigation"
@@ -32,7 +32,7 @@
     "url": "https://github.com/nhsevidence/nice-design-system/issues"
   },
   "dependencies": {
-    "@nice-digital/nds-core": "^1.0.0"
+    "@nice-digital/nds-core": "^1.0.1-alpha.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0"
