--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -14,7 +14,8 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "http://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   },
   "repository": {
     "type": "git",
@@ -42,5 +43,6 @@
     "@nice-digital/nds-stacked-nav": "^1.0.1-alpha.0",
     "@nice-digital/nds-tabs": "^1.0.1-alpha.0",
     "@nice-digital/nds-tag": "^1.0.1-alpha.0"
-  }
+  },
+  "gitHead": "219eb95773dd5cbd7b43653fc86cc12dc496bb59"
 }
