--- a/packages/nds-action-banner/package.json
+++ b/packages/nds-action-banner/package.json
@@ -20,7 +20,8 @@
     "es"
   ],
   "publishConfig": {
-    "registry": "http://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   },
   "repository": {
     "type": "git",
@@ -37,5 +38,6 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0"
-  }
+  },
+  "gitHead": "219eb95773dd5cbd7b43653fc86cc12dc496bb59"
 }
