--- a/packages/nds-filters/package.json
+++ b/packages/nds-filters/package.json
@@ -17,7 +17,8 @@
     "es"
   ],
   "publishConfig": {
-    "registry": "http://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   },
   "repository": {
     "type": "git",
@@ -34,5 +35,6 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0"
-  }
+  },
+  "gitHead": "219eb95773dd5cbd7b43653fc86cc12dc496bb59"
 }
