--- a/packages/nds-stacked-nav/package.json
+++ b/packages/nds-stacked-nav/package.json
@@ -19,7 +19,8 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "http://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   },
   "repository": {
     "type": "git",
@@ -36,5 +37,6 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0"
-  }
+  },
+  "gitHead": "219eb95773dd5cbd7b43653fc86cc12dc496bb59"
 }
