--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@nice-digital/icons",
-  "version": "1.6.0",
+  "version": "2.0.0-beta.5",
   "description": "Icons for use in NICE Digital Services",
   "main": "index.js",
   "scripts": {
-    "start": "npm run webfont",
+    "start": "npm run webfont && npm run svgr",
+    "svgr": "svgr -d es6 src && npm run es5ify",
+    "es5ify": "babel es6 -d lib",
     "webfont": "grunt dist --color",
     "test": "echo \"No tests :)\" && exit 0",
     "readme": "doctoc ./README.md && babel-node ./scripts/readme-replacer.js",
@@ -15,7 +17,7 @@
     "release:minor": "np minor",
     "release:patch": "np patch",
     "// Lifecycle hooks": "",
-    "version": "npm run webfont && npm run readme"
+    "prepublishOnly": "npm start && npm run readme"
   },
   "repository": {
     "type": "git",
@@ -40,23 +42,32 @@
   "homepage": "https://github.com/nhsevidence/nice-icons#readme",
   "files": [
     "dist",
+    "es6",
+    "lib",
+    "scss",
     "src"
   ],
   "publishConfig": {
     "access": "public"
   },
   "devDependencies": {
-    "@nice-digital/eslint-config": "^1.0.2",
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.6",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-flow": "^6.23.0",
-    "doctoc": "^1.3.1",
-    "eslint": "^5.1.0",
-    "eslint-plugin-flowtype": "^2.50.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@nice-digital/eslint-config": "^1.0.3",
+    "@svgr/cli": "^4.1.0",
+    "babel-eslint": "^10.0.1",
+    "doctoc": "^1.4.0",
+    "eslint": "^5.13.0",
+    "eslint-plugin-flowtype": "^3.4.1",
     "grunt": "^1.0.3",
-    "grunt-webfont": "^1.7.1",
-    "load-grunt-config": "^0.19.2",
-    "np": "^3.0.4"
+    "grunt-webfont": "^1.7.2",
+    "load-grunt-config": "^1.0.1",
+    "np": "^4.0.2"
+  },
+  "peerDependencies": {
+    "react": ">=15"
   }
 }
