--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/icons",
-  "version": "2.0.0-beta.5",
+  "version": "2.0.0",
   "description": "Icons for use in NICE Digital Services",
   "main": "index.js",
   "scripts": {
