--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -11,7 +11,9 @@
     "test": "__tests__"
   },
   "files": [
-    "lib"
+    "lib",
+    "es",
+    "scss"
   ],
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
@@ -34,6 +36,7 @@
     "@nice-digital/nds-card": "^1.0.2-alpha.0",
     "@nice-digital/nds-core": "^1.0.2-alpha.0",
     "@nice-digital/nds-filters": "^1.0.2-alpha.0",
+    "@nice-digital/nds-forms": "^1.0.3-alpha.0",
     "@nice-digital/nds-hero": "^1.0.2-alpha.0",
     "@nice-digital/nds-in-page-nav": "^1.0.2-alpha.0",
     "@nice-digital/nds-maintain-ratio": "^1.0.2-alpha.0",
