--- a/packages/nds-core/package.json
+++ b/packages/nds-core/package.json
@@ -18,7 +18,8 @@
   },
   "files": [
     "lib",
-    "es"
+    "es",
+    "scss"
   ],
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
