--- a/packages/nds-in-page-nav/package.json
+++ b/packages/nds-in-page-nav/package.json
@@ -13,7 +13,9 @@
     "test": "__tests__"
   },
   "files": [
-    "lib"
+    "lib",
+    "es",
+    "scss"
   ],
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
