--- a/packages/nds-jquery/package.json
+++ b/packages/nds-jquery/package.json
@@ -14,7 +14,8 @@
     "test": "__tests__"
   },
   "files": [
-    "lib"
+    "lib",
+    "es"
   ],
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
