--- a/packages/nds-tag/package.json
+++ b/packages/nds-tag/package.json
@@ -17,7 +17,8 @@
   },
   "files": [
     "lib",
-    "es"
+    "es",
+    "scss"
   ],
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
