--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "dev": "lerna run --scope=dev-app start",
+    "dev": "npm run build:es && lerna run --scope=dev-app start",
     "// TESTS": "",
     "test": "cross-env CI=true npm run test:unit && npm run lint && npm run flow",
     "test:unit": "jest",
@@ -39,48 +39,48 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@nice-digital/eslint-config": "^1.0.1",
-    "@storybook/addon-actions": "^4.1.6",
-    "@storybook/addon-knobs": "^4.1.6",
-    "@storybook/addon-links": "^4.1.6",
-    "@storybook/addon-viewport": "^4.1.6",
-    "@storybook/addons": "^4.1.6",
-    "@storybook/react": "^4.1.6",
+    "@storybook/addon-actions": "^5.0.6",
+    "@storybook/addon-knobs": "^5.0.6",
+    "@storybook/addon-links": "^5.0.6",
+    "@storybook/addon-viewport": "^5.0.6",
+    "@storybook/addons": "^5.0.6",
+    "@storybook/react": "^5.0.6",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.4",
     "concurrently": "^4.1.0",
     "cross-env": "^5.2.0",
-    "css-loader": "^1.0.1",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.7.0",
+    "css-loader": "^2.1.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "enzyme-to-json": "^3.3.5",
     "eslint": "^5.9.0",
     "eslint-plugin-flowtype": "^3.2.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.11.1",
     "flow": "^0.2.3",
-    "flow-bin": "^0.87.0",
+    "flow-bin": "^0.96.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.6.0",
-    "lerna": "^3.5.1",
+    "jest": "^24.7.1",
+    "lerna": "^3.13.1",
     "node-sass": "^4.10.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "stylelint": "^9.9.0",
     "stylelint-config-standard": "^18.2.0",
-    "stylelint-scss": "^3.4.0"
+    "stylelint-scss": "^3.5.4"
   },
   "dependencies": {
-    "@nice-digital/icons": "^1.5.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "@nice-digital/icons": "^2.0.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
