--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -45,7 +45,8 @@
     "@nice-digital/nds-phase-banner": "^1.0.3-alpha.0",
     "@nice-digital/nds-stacked-nav": "^1.0.3-alpha.0",
     "@nice-digital/nds-tabs": "^1.0.3-alpha.0",
-    "@nice-digital/nds-tag": "^1.0.3-alpha.0"
+    "@nice-digital/nds-tag": "^1.0.3-alpha.0",
+    "normalize.css": "7.0.0"
   },
   "gitHead": "219eb95773dd5cbd7b43653fc86cc12dc496bb59"
 }
