--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start": "npm run dev",
     "dev": "npm run build:es && lerna run --scope=dev-app start",
     "// STORYBOOK": "",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006 -s ./node_modules/@nice-digital/icons/dist/",
     "storybook:build": "build-storybook",
     "// LERNA": "",
-    "bootstrap": "lerna bootstrap --hoist",
+    "bootstrap": "lerna bootstrap --hoist --nohoist=babel-*",
     "// TESTS": "",
     "test": "cross-env CI=true npm run test:unit && npm run lint && npm run flow",
     "test:unit": "jest",
@@ -61,6 +61,7 @@
     "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.4",
     "concurrently": "^4.1.0",
+    "copyfiles": "^2.1.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
