--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://nhsevidence.github.io/nice-design-system/",
   "license": "MIT",
   "main": "lib/design-system.js",
+  "style": "scss/nice-design-system.scss",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
