--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
     "storybook": "start-storybook -p 6006 -s ./node_modules/@nice-digital/icons/dist/",
     "storybook:build": "build-storybook",
     "// LERNA": "",
-    "bootstrap": "lerna bootstrap --hoist --nohoist=babel-*",
+    "bootstrap": "lerna bootstrap --hoist",
     "publish": "lerna publish",
     "// TESTS": "",
     "test": "cross-env CI=true npm run test:unit && npm run lint && npm run flow",
     "test:unit": "jest",
     "test:unit:watch": "jest --watch",
     "// LINTING": "",
-    "lint": "npm run lint:js && npm run lint:scss",
+    "lint": "npm run prettier && npm run lint:js && npm run lint:scss",
     "lint:js": "eslint ./packages/*/src/**/*.js",
     "lint:js:fix": "npm run lint:js -- --fix",
     "lint:scss": "stylelint packages/**/*.scss",
+    "lint:scss:fix": "npm run lint:scss -- --fix",
+    "prettier": "prettier --check packages/*/{src,scss,__{tests,mocks}__}/**/*.{scss,js,json}",
     "flow": "flow",
     "// TRANSIPLE ES6": "",
     "prebuild:lib": "lerna exec rimraf lib",
@@ -31,8 +33,7 @@
     "build:es:watch": "npm run build:es -- -w",
     "build:watch": "concurrently -n build: npm:build:*:watch",
     "// LIFECYCLE": "",
-    "postinstall": "npm run bootstrap",
-    "prepublish": "npm run build:lib && npm run build:es"
+    "postinstall": "npm run bootstrap"
   },
   "config": {
     "//": "Banner is used for prepending to compiled JS and CSS",
@@ -44,49 +45,60 @@
     "Ian Routledge (http://ediblecode.com)"
   ],
   "license": "MIT",
+  "engines": {
+    "node": ">= 8.9.0"
+  },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-transform-modules-commonjs": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/core": "^7.5.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.5.0",
+    "@babel/preset-env": "^7.5.0",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@nice-digital/eslint-config": "^1.0.1",
-    "@storybook/addon-actions": "^5.0.6",
-    "@storybook/addon-knobs": "^5.0.6",
-    "@storybook/addon-links": "^5.0.6",
-    "@storybook/addon-viewport": "^5.0.6",
-    "@storybook/addons": "^5.0.6",
-    "@storybook/react": "^5.0.6",
+    "@storybook/addon-actions": "^5.1.9",
+    "@storybook/addon-knobs": "^5.1.9",
+    "@storybook/addon-links": "^5.1.9",
+    "@storybook/addon-viewport": "^5.1.9",
+    "@storybook/addons": "^5.1.9",
+    "@storybook/react": "^5.1.9",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.7.1",
-    "babel-loader": "^8.0.4",
-    "concurrently": "^4.1.0",
+    "babel-eslint": "^10.0.2",
+    "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.6",
+    "concurrently": "^4.1.1",
     "copyfiles": "^2.1.0",
     "cross-env": "^5.2.0",
-    "css-loader": "^2.1.1",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2",
+    "css-loader": "^3.0.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
-    "eslint": "^5.9.0",
-    "eslint-plugin-flowtype": "^3.2.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint": "^6.0.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-react-app": "^4.0.1",
+    "eslint-plugin-flowtype": "^3.11.1",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-react-hooks": "^1.6.1",
     "flow": "^0.2.3",
-    "flow-bin": "^0.96.0",
+    "flow-bin": "^0.102.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.7.1",
-    "lerna": "^3.13.1",
-    "node-sass": "^4.10.0",
+    "jest": "^24.8.0",
+    "lerna": "^3.15.0",
+    "node-sass": "^4.12.0",
+    "prettier": "^1.18.2",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "stylelint": "^9.9.0",
-    "stylelint-config-standard": "^18.2.0",
-    "stylelint-scss": "^3.5.4"
+    "stylelint": "^10.1.0",
+    "stylelint-config-prettier": "^5.2.0",
+    "stylelint-config-standard": "^18.3.0",
+    "stylelint-prettier": "^1.1.1",
+    "stylelint-scss": "^3.9.0"
   },
   "dependencies": {
-    "@nice-digital/icons": "^2.0.1",
+    "@nice-digital/icons": "^2.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
