Remove flow type

--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "description": "Monorepo for the NICE Design System",
   "scripts": {
     "start": "npm run dev",
-    "dev": "npm run build:es && lerna run --scope=dev-app start",
+    "dev": "concurrently \"npm run build:es:watch\" \"lerna run --scope=dev-app start\"",
     "// STORYBOOK": "",
     "storybook": "start-storybook -p 6006 -s ./node_modules/@nice-digital/icons/dist/",
     "storybook:build": "build-storybook",
     "// LERNA": "",
+    "lerna": "lerna",
     "bootstrap": "lerna bootstrap --hoist",
     "publish": "lerna publish",
     "// TESTS": "",
-    "test": "cross-env CI=true npm run test:unit && npm run lint && npm run flow",
+    "test": "cross-env CI=true npm run test:unit && npm run lint",
     "test:unit": "jest",
     "test:unit:watch": "jest --watch",
     "// LINTING": "",
@@ -23,7 +24,6 @@
     "lint:scss": "stylelint packages/**/*.scss",
     "lint:scss:fix": "npm run lint:scss -- --fix",
     "prettier": "prettier --check packages/*/{src,scss,__{tests,mocks}__}/**/*.{scss,js,json}",
-    "flow": "flow",
     "// TRANSIPLE ES6": "",
     "prebuild:lib": "lerna exec rimraf lib",
     "build:lib": "lerna exec --scope=@nice-digital/nds-* --parallel -- babel src -d lib --source-maps --root-mode upward",
@@ -52,7 +52,6 @@
     "@babel/core": "^7.5.0",
     "@babel/plugin-transform-modules-commonjs": "^7.5.0",
     "@babel/preset-env": "^7.5.0",
-    "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@nice-digital/eslint-config": "^1.0.1",
     "@storybook/addon-actions": "^5.1.9",
@@ -74,13 +73,10 @@
     "enzyme-to-json": "^3.3.5",
     "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-flowtype": "^3.11.1",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
-    "flow": "^0.2.3",
-    "flow-bin": "^0.102.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
     "lerna": "^3.15.0",
