--- a/packages/nds-action-banner/package.json
+++ b/packages/nds-action-banner/package.json
@@ -35,7 +35,9 @@
     "url": "https://github.com/nhsevidence/nice-design-system/issues"
   },
   "dependencies": {
-    "@nice-digital/nds-core": "^1.0.4-alpha.0"
+    "@nice-digital/icons": "^2.1.1",
+    "@nice-digital/nds-core": "^1.0.4-alpha.0",
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0"
