--- a/packages/nds-alert/package.json
+++ b/packages/nds-alert/package.json
@@ -36,7 +36,8 @@
   },
   "dependencies": {
     "@nice-digital/nds-core": "^1.0.4-alpha.0",
-    "classnames": "^2.2.6"
+    "classnames": "^2.2.6",
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0"
