--- a/packages/nds-core/package.json
+++ b/packages/nds-core/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@nice-digital/icons": "^2.1.1",
+    "prop-types": "^15.7.2",
     "sass-mq": "^5.0.0"
   },
   "devDependencies": {
