--- a/packages/nds-forms/package.json
+++ b/packages/nds-forms/package.json
@@ -36,7 +36,8 @@
   },
   "dependencies": {
     "@nice-digital/nds-core": "^1.0.4-alpha.0",
-    "classnames": "^2.2.6"
+    "classnames": "^2.2.6",
+    "prop-types": "^15.7.2"
   },
   "gitHead": "219eb95773dd5cbd7b43653fc86cc12dc496bb59"
 }
