--- a/packages/nds-panel/package.json
+++ b/packages/nds-panel/package.json
@@ -11,6 +11,7 @@
   "main": "lib/Panel.js",
   "module": "es/Panel.js",
   "style": "scss/panel.scss",
+  "typings": "./types.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
