--- a/packages/nds-tag/package.json
+++ b/packages/nds-tag/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "main": "lib/Tag.js",
   "module": "es/Tag.js",
+  "types": "nds-tag.d.ts",
   "style": "scss/tag.scss",
   "directories": {
     "lib": "lib",
