Move Storybook into a Lerna managed package

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "npm run dev",
     "dev": "concurrently \"npm run build:es:watch\" \"lerna run --scope=dev-app start\"",
     "// STORYBOOK": "",
-    "storybook": "start-storybook -p 6006 -s ./node_modules/@nice-digital/icons/dist/",
-    "storybook:build": "build-storybook",
+    "storybook": "lerna run --scope=storybook start-storybook -p 6006 -s ./node_modules/@nice-digital/icons/dist/",
+    "storybook:build": "lerna run --scope=storybook build-storybook",
     "// LERNA": "",
     "lerna": "lerna",
     "bootstrap": "lerna bootstrap --hoist",
@@ -54,12 +54,6 @@
     "@babel/preset-env": "^7.5.0",
     "@babel/preset-react": "^7.0.0",
     "@nice-digital/eslint-config": "^1.0.1",
-    "@storybook/addon-actions": "^5.1.9",
-    "@storybook/addon-knobs": "^5.1.9",
-    "@storybook/addon-links": "^5.1.9",
-    "@storybook/addon-viewport": "^5.1.9",
-    "@storybook/addons": "^5.1.9",
-    "@storybook/react": "^5.1.9",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.8.0",
