--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@nice-digital/design-system": "^1.0.6-alpha.0",
     "@nice-digital/icons": "^2.1.1",
+    "@nice-digital/nds-card": "^1.0.4-alpha.0",
     "@nice-digital/nds-radio": "^1.0.7-alpha.0",
     "@types/storybook__react": "^4.0.2"
   },
