--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -30,6 +30,7 @@
     "@nice-digital/icons": "^2.1.1",
     "@nice-digital/nds-card": "^1.0.4-alpha.0",
     "@nice-digital/nds-radio": "^1.0.7-alpha.0",
+    "@nice-digital/nds-tag": "^1.0.4-alpha.0",
     "@types/storybook__react": "^4.0.2"
   },
   "devDependencies": {
