--- a/packages/nds-breadcrumbs/package.json
+++ b/packages/nds-breadcrumbs/package.json
@@ -11,6 +11,7 @@
   "main": "lib/Breadcrumbs.js",
   "module": "es/Breadcrumbs.js",
   "style": "scss/breadcrumbs.scss",
+  "types": "nds-breadcrumbs.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
