--- a/package.json
+++ b/package.json
@@ -54,6 +54,10 @@
     "@babel/preset-env": "^7.5.0",
     "@babel/preset-react": "^7.0.0",
     "@nice-digital/eslint-config": "^1.0.1",
+    "@types/jest": "^24.0.17",
+    "@types/node": "^12.7.2",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.8.5",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.8.0",
@@ -83,7 +87,8 @@
     "stylelint-config-prettier": "^5.2.0",
     "stylelint-config-standard": "^18.3.0",
     "stylelint-prettier": "^1.1.1",
-    "stylelint-scss": "^3.9.0"
+    "stylelint-scss": "^3.9.0",
+    "typescript": "^3.5.3"
   },
   "dependencies": {
     "@nice-digital/icons": "^2.1.1",
