--- a/packages/nds-card/package.json
+++ b/packages/nds-card/package.json
@@ -8,6 +8,7 @@
   "main": "lib/Card.js",
   "module": "es/Card.js",
   "style": "scss/card.scss",
+  "types": "nds-card.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -15,7 +16,8 @@
   "files": [
     "lib",
     "es",
-    "scss"
+    "scss",
+    "*.d.ts"
   ],
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
