--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "> TODO: description",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
   "homepage": "https://github.com/nhsevidence/nice-design-system#readme",
@@ -26,12 +26,12 @@
     "url": "https://github.com/nhsevidence/nice-design-system/issues"
   },
   "dependencies": {
-    "@nice-digital/design-system": "^1.0.6-alpha.0",
+    "@nice-digital/design-system": "^1.0.7-alpha.0",
     "@nice-digital/icons": "^2.1.1",
-    "@nice-digital/nds-breadcrumbs": "^1.0.4-alpha.0",
-    "@nice-digital/nds-card": "^1.0.4-alpha.0",
-    "@nice-digital/nds-radio": "^1.0.7-alpha.0",
-    "@nice-digital/nds-tag": "^1.0.4-alpha.0",
+    "@nice-digital/nds-breadcrumbs": "^1.0.5-alpha.0",
+    "@nice-digital/nds-card": "^1.0.5-alpha.0",
+    "@nice-digital/nds-radio": "^1.0.8-alpha.0",
+    "@nice-digital/nds-tag": "^1.0.5-alpha.0",
     "@types/storybook__react": "^4.0.2"
   },
   "devDependencies": {
