Rename publish command to release
Due to the way npm handles the publish command
it adds a gitHead property in the package.json file.
We rename the alias for lerna publish from "publish"
to "release" to solve the issue. See:
https://github.com/lerna/lerna/issues/1880

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "// LERNA": "",
     "lerna": "lerna",
     "bootstrap": "lerna bootstrap --hoist",
-    "publish": "lerna publish",
+    "release": "lerna publish",
     "// TESTS": "",
     "test": "cross-env CI=true npm run test:unit && npm run lint",
     "test:unit": "jest",
