--- a/packages/nds-forms/package.json
+++ b/packages/nds-forms/package.json
@@ -8,6 +8,7 @@
   "main": "lib/index.js",
   "module": "es/index.js",
   "scss": "scss/forms.scss",
+  "types": "nds-forms.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
