--- a/packages/nds-panel/package.json
+++ b/packages/nds-panel/package.json
@@ -19,7 +19,8 @@
   "files": [
     "lib",
     "es",
-    "scss"
+    "scss",
+    "*.d.ts"
   ],
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
