--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -31,6 +31,7 @@
     "@nice-digital/icons": "^2.1.1",
     "@nice-digital/nds-breadcrumbs": "^1.0.6-alpha.0",
     "@nice-digital/nds-card": "^1.0.6-alpha.0",
+    "@nice-digital/nds-panel": "^1.0.9-alpha.0",
     "@nice-digital/nds-radio": "^1.0.11-alpha.0",
     "@nice-digital/nds-tag": "^1.0.6-alpha.0",
     "@types/storybook__react": "^4.0.2"
