--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -30,6 +30,7 @@
     "@nice-digital/design-system": "^1.0.12-alpha.0",
     "@nice-digital/icons": "^2.1.1",
     "@nice-digital/nds-breadcrumbs": "^1.0.7-alpha.0",
+    "@nice-digital/nds-button": "^1.0.7-alpha.0",
     "@nice-digital/nds-card": "^1.0.7-alpha.0",
     "@nice-digital/nds-panel": "^1.0.10-alpha.0",
     "@nice-digital/nds-radio": "^1.0.12-alpha.0",
