--- a/packages/nds-button/package.json
+++ b/packages/nds-button/package.json
@@ -8,6 +8,7 @@
   "main": "lib/Button.js",
   "module": "es/Button.js",
   "style": "scss/button.scss",
+  "types": "nds-button.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
