--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "stylelint": "^10.1.0",
     "stylelint-config-prettier": "^5.2.0",
     "stylelint-config-standard": "^18.3.0",
+    "stylelint-order": "^3.1.0",
     "stylelint-prettier": "^1.1.1",
     "stylelint-scss": "^3.9.0",
     "typescript": "^3.5.3"
