Update Grid access value

--- a/packages/nds-grid/package.json
+++ b/packages/nds-grid/package.json
@@ -23,7 +23,8 @@
     "*.d.ts"
   ],
   "publishConfig": {
-    "registry": "http://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   },
   "repository": {
     "type": "git",
