--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -51,7 +51,8 @@
     "@nice-digital/nds-stacked-nav": "^1.0.10-alpha.0",
     "@nice-digital/nds-tabs": "^1.0.10-alpha.0",
     "@nice-digital/nds-tag": "^1.0.10-alpha.0",
-    "normalize.css": "7.0.0"
+    "normalize.css": "7.0.0",
+    "react": "^16.11.0"
   },
   "gitHead": "a4db68f43916ad6c4cb19612e10aae200e80b5a8"
 }
