--- a/components/nds-core/package.json
+++ b/components/nds-core/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@nice-digital/icons": "^2.1.1",
     "prop-types": "^15.7.2",
+    "react": "^16.11.0",
     "sass-mq": "^5.0.0"
   },
   "devDependencies": {
