--- a/components/nds-grid/package.json
+++ b/components/nds-grid/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@nice-digital/nds-core": "^1.0.10-alpha.0",
     "classnames": "^2.2.6",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react": "^16.11.0"
   }
 }
