--- a/components/nds-hero/package.json
+++ b/components/nds-hero/package.json
@@ -8,7 +8,7 @@
   "author": "Ian Routledge <ian.routledge@nice.org.uk>",
   "homepage": "https://nhsevidence.github.io/nice-design-system/",
   "license": "MIT",
-  "types":"nds-hero.d.ts",
+  "types": "nds-hero.d.ts",
   "main": "lib/Hero.js",
   "module": "es/Hero.js",
   "style": "scss/hero.scss",
@@ -38,7 +38,8 @@
   },
   "dependencies": {
     "@nice-digital/nds-core": "^1.0.10-alpha.0",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react": "^16.11.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0"
