--- a/components/nds-page-header/package.json
+++ b/components/nds-page-header/package.json
@@ -38,7 +38,8 @@
   },
   "dependencies": {
     "@nice-digital/nds-core": "^1.0.10-alpha.0",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react": "^16.11.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0"
