--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -39,6 +39,7 @@
     "@nice-digital/nds-form-group": "^1.0.4-alpha.0",
     "@nice-digital/nds-grid": "^1.0.5-alpha.0",
     "@nice-digital/nds-hero": "^1.0.11-alpha.0",
+    "@nice-digital/nds-maintain-ratio": "^1.0.11-alpha.0",
     "@nice-digital/nds-page-header": "^1.0.11-alpha.0",
     "@nice-digital/nds-panel": "^1.0.14-alpha.0",
     "@nice-digital/nds-radio": "^1.0.16-alpha.0",
