NW-1272 Add filter summary
- Removed redundant imports from root `src` folder
- Corrected negative rem SCSS

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,12 @@
 			"filename": true
 		}
 	],
-	"vsicons.customIconFolderPath": "./.vscode/"
+	"vsicons.customIconFolderPath": "./.vscode/",
+	"workbench.colorCustomizations": {
+		"editorCursor.foreground": "#0f0",
+		"terminalCursor.foreground": "#0f0",
+		"activityBar.background": "#1B3137",
+		"titleBar.activeBackground": "#26444D",
+		"titleBar.activeForeground": "#F9FCFC"
+	}
 }
