Fix linting issues

--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "test:unit:watch": "jest --watch",
     "// LINTING": "",
     "lint": "npm run prettier && npm run lint:js && npm run lint:scss",
-    "lint:js": "eslint ./packages/*/src/**/*.js",
+    "lint:js": "eslint ./{packages,components}/**/*.js",
     "lint:js:fix": "npm run lint:js -- --fix",
-    "lint:scss": "stylelint packages/**/*.scss",
+    "lint:scss": "stylelint ./{packages,components}/**/*.scss",
     "lint:scss:fix": "npm run lint:scss -- --fix",
-    "prettier": "prettier --check packages/*/{src,scss,__{tests,mocks}__}/**/*.{scss,js,json}",
+    "prettier": "prettier --check components/*/{src,scss,__{tests,mocks}__}/**/*.{scss,js,json} packages/**/*.{scss,js,json}",
     "// TRANSIPLE ES6": "",
     "prebuild:lib": "lerna exec rimraf lib",
     "build:lib": "lerna exec --scope=@nice-digital/nds-* --parallel -- babel src -d lib --source-maps --root-mode upward",
@@ -82,7 +82,7 @@
     "eslint-plugin-react": "^7.14.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
-    "lerna": "^3.15.0",
+    "lerna": "^3.20.2",
     "node-sass": "^4.13.0",
     "prettier": "^1.18.2",
     "rimraf": "^2.6.2",
