VS Code settings & prettier ignore

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,6 @@
 	"editor.rulers": [80],
 	"prettier.endOfLine": "lf",
 	"files.eol": "\n",
-	"sasslint.enable": false,
 	"css.validate": false,
 	"less.validate": false,
 	"scss.validate": false,
@@ -17,20 +16,9 @@
 		"dist": true,
 		"temp": true
 	},
-	"vsicons.associations.folders": [
-		{
-			"icon": "storybook",
-			"extensions": ["__stories__", ".storybook"],
-			"format": "svg",
-			"filename": true
-		}
-	],
-	"vsicons.customIconFolderPath": "./.vscode/",
 	"workbench.colorCustomizations": {
-		"editorCursor.foreground": "#0f0",
-		"terminalCursor.foreground": "#0f0",
-		"activityBar.background": "#1B3137",
-		"titleBar.activeBackground": "#26444D",
+		"activityBar.background": "#45503B",
+		"titleBar.activeBackground": "#45503B",
 		"titleBar.activeForeground": "#F9FCFC"
 	}
 }
