NDS-90 Filter styling
Allow anchors for:
- filter panel title
- filter group title
- filter option label
Style filter count
Style custom filter checkboxes

--- a/components/nds-filters/package.json
+++ b/components/nds-filters/package.json
@@ -5,6 +5,7 @@
   "author": "Ian Routledge <ian.routledge@nice.org.uk>",
   "homepage": "https://nhsevidence.github.io/nice-design-system/",
   "license": "MIT",
+  "types": "nds-filters.d.ts",
   "main": "lib/Filters.js",
   "module": "es/Filters.js",
   "style": "scss/filters.scss",
