NDS-93 Forms deprecation

--- a/components/nds-forms/package.json
+++ b/components/nds-forms/package.json
@@ -8,6 +8,7 @@
   "main": "lib/index.js",
   "module": "es/index.js",
   "scss": "scss/forms.scss",
+  "types": "nds-forms.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -15,7 +16,8 @@
   "files": [
     "lib",
     "es",
-    "scss"
+    "scss",
+    "*.d.ts"
   ],
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
