NDS-94 Nest image into styled container

--- a/components/nds-card/package.json
+++ b/components/nds-card/package.json
@@ -36,8 +36,7 @@
   "dependencies": {
     "@nice-digital/nds-core": "^1.0.20-alpha.0",
     "prop-types": "^15.7.2",
-    "react": "^16.11.0",
-    "react-children-utilities": "^2.1.1"
+    "react": "^16.11.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0"
