Considerable prune of structure

--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -41,7 +41,8 @@
 	"license": "MIT",
 	"scripts": {
 		"build": "gatsby build",
-		"develop": "gatsby develop",
+		"develop-playground": "cross-env GATSBY_GRAPHQL_IDE=playground gatsby develop",
+    "develop": "gatsby develop",
 		"format": "prettier --write \"**/*.{js,jsx,json,md}\"",
 		"start": "gatsby clean && npm run develop",
 		"serve": "gatsby serve",
