--- a/components/nds-checkbox/package.json
+++ b/components/nds-checkbox/package.json
@@ -39,6 +39,7 @@
     "react": "^16.11.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.0"
+    "@babel/cli": "^7.5.0",
+    "classnames": "^2.2.6"
   }
 }
