--- a/components/nds-simple-pagination/package.json
+++ b/components/nds-simple-pagination/package.json
@@ -40,7 +40,9 @@
     "@nice-digital/nds-core": "^1.0.23-alpha.0",
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2",
-    "react": "^16.11.0"
+    "react": "^16.11.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0"
